@@ -1,4 +1,4 @@
-# EMX A.OUT STYLE MAKEFILE (REQ. EMXRT.DLL)
+# EMX OS/2 OMF STYLE MAKEFILE
 #
 
 CC      = gcc
@@ -6,17 +6,18 @@ RM	= cmd /c del
 
 DEBUG=-s
 # set to -g for debugging
-CFLAGS  = -I../.. -c -O3 $(DEBUG)
-LFLAGS  = -Zcrtdll
+
+CFLAGS  = -Zomf -I../.. -c -O3 $(DEBUG)
+LFLAGS  = -Zomf -Zsys -Zlinker /PM:VIO $(DEBUG)
 
 OSTYPE=OS2
 UNAME=OS/2
 
 CDEFS=-D$(OSTYPE) -DUNAME="$(UNAME)"
-LIBS=../../fidoconf/fconfemx.a ../../smapi/smapiemx.a
+LIBS=../../fidoconf/fconfemo.lib ../../smapi/smapiemo.lib
 SRC_DIR=..\SRC\
 
-OBJS= log.o config.o bsoutil.o bsopack.o
+OBJS= log.obj config.obj bsoutil.obj bsopack.obj
 
 all: bsopack
 
@@ -24,7 +25,7 @@ $(OBJS): $(SRC_DIR)\*.c
 		$(CC) $(CFLAGS) $(CDEFS) $(SRC_DIR)\$*.c
 
 bsopack: $(OBJS)
-	 $(CC) $(LFLAGS) log.o config.o bsoutil.o bsopack.o $(LIBS) -o bsopack.exe
+	 $(CC) $(LFLAGS) $(OBJS) $(LIBS) -o bsopack.exe
 
 
 .IGNORE
